deploy/environments/dev/base-kind-istio/destination-rules.yaml
# **WARNING** Only use in testing scenarios
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ${EPP_NAME_P}-insecure-tls
spec:
  host: ${EPP_NAME_P}
  trafficPolicy:
      tls:
        mode: SIMPLE
        insecureSkipVerify: true
---
# **WARNING** Only use in testing scenarios
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ${EPP_NAME_D}-insecure-tls
spec:
  host: ${EPP_NAME_D}
  trafficPolicy:
      tls:
        mode: SIMPLE
        insecureSkipVerify: true
